Make the Cloud Print service process listen for WM_QUIT.

The Windows base::MessagePumpUI used to process WM_QUIT, but r553653
changed it to ignore WM_QUIT. This CL adds EnableWmQuit() methods to
MessagePumpForUI and MessageLoopForUI on Windows. The Cloud Print
service process can then call EnableWmQuit() for its MessagePumpForUI
to get the old behavior.

BUG=860827

Change-Id: Ie9d9c4c8e2dd205f3ec24cb10be364d0653a7f97
Reviewed-on: https://chromium-review.googlesource.com/1128327
Commit-Queue: Lei Zhang <thestig@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573620}
Former-commit-id: 23e212e0f9b0d23d39b8958bd44d5b7a0408cb60