base/message_loop/message_loop.cc
@@ -621,6 +621,12 @@ void MessageLoopForUI::QuitWhenIdle(base::OnceClosure callback) {
 }
 #endif  // defined(OS_ANDROID)
 
+#if defined(OS_WIN)
+void MessageLoopForUI::EnableWmQuit() {
+  static_cast<MessagePumpForUI*>(pump_.get())->EnableWmQuit();
+}
+#endif  // defined(OS_WIN)
+
 #endif  // !defined(OS_NACL)
 
 //------------------------------------------------------------------------------
