chrome/service/service_main.cc
@@ -6,6 +6,7 @@
 #include "base/debug/debugger.h"
 #include "base/message_loop/message_loop.h"
 #include "base/run_loop.h"
+#include "build/build_config.h"
 #include "chrome/common/service_process_util.h"
 #include "chrome/service/service_process.h"
 #include "content/public/common/main_function_params.h"
@@ -19,7 +20,14 @@ int CloudPrintServiceProcessMain(
   net::URLRequest::SetDefaultCookiePolicyToBlock();
 
   base::PlatformThread::SetName("CrServiceMain");
+
   base::MessageLoopForUI main_message_loop;
+#if defined(OS_WIN)
+  // The service process needs to be able to process WM_QUIT messages from the
+  // Cloud Print Service UI on Windows.
+  main_message_loop.EnableWmQuit();
+#endif
+
   if (parameters.command_line.HasSwitch(switches::kWaitForDebugger)) {
     base::debug::WaitForDebugger(60, true);
   }
