base/message_loop/message_loop_unittest.cc
@@ -1785,13 +1785,14 @@ INSTANTIATE_TEST_CASE_P(
 // Run()ning explicitly, via QuitClosure() etc (see https://crbug.com/720078)
 TEST_P(MessageLoopTest, WmQuitIsIgnored) {
   MessageLoop loop(MessageLoop::TYPE_UI);
-  RunLoop run_loop;
+
   // Post a WM_QUIT message to the current thread.
   ::PostQuitMessage(0);
 
   // Post a task to the current thread, with a small delay to make it less
   // likely that we process the posted task before looking for WM_* messages.
   bool task_was_run = false;
+  RunLoop run_loop;
   loop.task_runner()->PostDelayedTask(
       FROM_HERE,
       BindOnce(
@@ -1805,6 +1806,29 @@ TEST_P(MessageLoopTest, WmQuitIsIgnored) {
   // Run the loop, and ensure that the posted task is processed before we quit.
   run_loop.Run();
   EXPECT_TRUE(task_was_run);
+}
+
+TEST_P(MessageLoopTest, WmQuitIsNotIgnoredWithEnableWmQuit) {
+  MessageLoop loop(MessageLoop::TYPE_UI);
+  static_cast<MessageLoopForUI*>(&loop)->EnableWmQuit();
+
+  // Post a WM_QUIT message to the current thread.
+  ::PostQuitMessage(0);
+
+  // Post a task to the current thread, with a small delay to make it less
+  // likely that we process the posted task before looking for WM_* messages.
+  RunLoop run_loop;
+  loop.task_runner()->PostDelayedTask(FROM_HERE,
+                                      BindOnce(
+                                          [](OnceClosure closure) {
+                                            ADD_FAILURE();
+                                            std::move(closure).Run();
+                                          },
+                                          run_loop.QuitClosure()),
+                                      TestTimeouts::tiny_timeout());
+
+  // Run the loop. It should not result in ADD_FAILURE() getting called.
+  run_loop.Run();
 }
 
 TEST_P(MessageLoopTest, PostDelayedTask_SharedTimer_SubPump) {
